css/main.css
/* ... */
@media (max-width: 420px) {
  .fp-reach {
    /*background-size: auto 68%;*/
  }
}


/* news */

.news .fp-section-wide.fp-people {
    border-top: 10px solid #efefef;
}
.news .fp-section-wide.fp-people:first-of-type {
    border-top: none;
}
p.news-date {
    width: 100%;
    font-size: 1.2em;
}
h3.headline {
    text-align: left;
    width: 100%;
    margin-top: 0;
    font-size: 2.2em;
}
.read-more {
    font-weight: bold;
}

